fix margin collapse by moving top margin inside .body wrapper

--- a/generic-styles/content-baked.less
+++ b/generic-styles/content-baked.less
@@ -232,7 +232,9 @@ span[data-type="media"] img {
   }
   .body(example) {
     .body(note);
-    margin-top: 1rem;
+    > .body {
+      margin-top: 1rem;
+    }
   }
 }
 
